--- a/mobile_apps.ipynb
+++ b/mobile_apps.ipynb
@@ -481,6 +481,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The company only builds apps that are free to downleoad and designed for an englshh-soeaking sound "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
