--- a/mobile_apps.ipynb
+++ b/mobile_apps.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "# import libraries \n",
     "import numpy as np \n",
-    "import pandas as pd \n"
+    "import pandas as pd \n",
+    "from langdetect import detect\n"
    ]
   },
   {
@@ -782,6 +783,29 @@
     "# Remove duplicates \n",
     "apple_df.drop_duplicates()\n",
     "google_df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the company designs apps for an english speaking audience."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing observations that are not for an english speaking audience\n",
+    "'''L= 30\n",
+    "for i in L:\n",
+    "    if detect(google_df.loc['App':i]) == 'en':\n",
+    "        pass\n",
+    "    else:\n",
+    "        drop\n",
+    "    '''\n"
    ]
   }
  ],
