--- a/mobile_apps.ipynb
+++ b/mobile_apps.ipynb
@@ -8,6 +8,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -16,7 +21,8 @@
     "# import libraries \n",
     "import numpy as np \n",
     "import pandas as pd \n",
-    "from langdetect import detect\n"
+    "from langdetect import detect\n",
+    "\n"
    ]
   },
   {
@@ -798,14 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Removing observations that are not for an english speaking audience\n",
-    "'''L= 30S\n",
-    "for i in L:\n",
-    "    if detect(google_df.loc['App':i]) == 'en':\n",
-    "        pass\n",
-    "    else:    \n",
-    "        drop\n",
-    "    '''\n"
+    "# Removing observations that are not for an english speaking audience\n"
    ]
   }
  ],
