--- a/mobile_apps.ipynb
+++ b/mobile_apps.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4        1  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "4    4.4 and up  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "[10358 rows x 13 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,180 +801,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>App</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Reviews</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Installs</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Content Rating</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Last Updated</th>\n",
-       "      <th>Current Ver</th>\n",
-       "      <th>Android Ver</th>\n",
-       "      <th>language</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Photo Editor &amp; Candy Camera &amp; Grid &amp; ScrapBook</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>159</td>\n",
-       "      <td>19M</td>\n",
-       "      <td>10,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design</td>\n",
-       "      <td>January 7, 2018</td>\n",
-       "      <td>1.0.0</td>\n",
-       "      <td>4.0.3 and up</td>\n",
-       "      <td>it</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Coloring book moana</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>967</td>\n",
-       "      <td>14M</td>\n",
-       "      <td>500,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design;Pretend Play</td>\n",
-       "      <td>January 15, 2018</td>\n",
-       "      <td>2.0.0</td>\n",
-       "      <td>4.0.3 and up</td>\n",
-       "      <td>eu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>U Launcher Lite – FREE Live Cool Themes, Hide ...</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>87510</td>\n",
-       "      <td>8.7M</td>\n",
-       "      <td>5,000,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design</td>\n",
-       "      <td>August 1, 2018</td>\n",
-       "      <td>1.2.4</td>\n",
-       "      <td>4.0.3 and up</td>\n",
-       "      <td>en</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sketch - Draw &amp; Paint</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>215644</td>\n",
-       "      <td>25M</td>\n",
-       "      <td>50,000,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Teen</td>\n",
-       "      <td>Art &amp; Design</td>\n",
-       "      <td>June 8, 2018</td>\n",
-       "      <td>Varies with device</td>\n",
-       "      <td>4.2 and up</td>\n",
-       "      <td>pl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pixel Draw - Number Art Coloring Book</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>967</td>\n",
-       "      <td>2.8M</td>\n",
-       "      <td>100,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design;Creativity</td>\n",
-       "      <td>June 20, 2018</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>4.4 and up</td>\n",
-       "      <td>pl</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 App        Category  Rating  \\\n",
-       "0     Photo Editor & Candy Camera & Grid & ScrapBook  ART_AND_DESIGN     4.1   \n",
-       "1                                Coloring book moana  ART_AND_DESIGN     3.9   \n",
-       "2  U Launcher Lite – FREE Live Cool Themes, Hide ...  ART_AND_DESIGN     4.7   \n",
-       "3                              Sketch - Draw & Paint  ART_AND_DESIGN     4.5   \n",
-       "4              Pixel Draw - Number Art Coloring Book  ART_AND_DESIGN     4.3   \n",
-       "\n",
-       "  Reviews  Size     Installs  Type Price Content Rating  \\\n",
-       "0     159   19M      10,000+  Free     0       Everyone   \n",
-       "1     967   14M     500,000+  Free     0       Everyone   \n",
-       "2   87510  8.7M   5,000,000+  Free     0       Everyone   \n",
-       "3  215644   25M  50,000,000+  Free     0           Teen   \n",
-       "4     967  2.8M     100,000+  Free     0       Everyone   \n",
-       "\n",
-       "                      Genres      Last Updated         Current Ver  \\\n",
-       "0               Art & Design   January 7, 2018               1.0.0   \n",
-       "1  Art & Design;Pretend Play  January 15, 2018               2.0.0   \n",
-       "2               Art & Design    August 1, 2018               1.2.4   \n",
-       "3               Art & Design      June 8, 2018  Varies with device   \n",
-       "4    Art & Design;Creativity     June 20, 2018                 1.1   \n",
-       "\n",
-       "    Android Ver language  \n",
-       "0  4.0.3 and up       it  \n",
-       "1  4.0.3 and up       eu  \n",
-       "2  4.0.3 and up       en  \n",
-       "3    4.2 and up       pl  \n",
-       "4    4.4 and up       pl  "
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Removing observations that are not for an english speaking audience\n",
     "\n",
     "# Identifying the rows with non-english apps\n",
     "google_df['language'] = google_df['App'].apply(lambda x: langid.classify(x)[0])  # Determine the language of the app\n",
     "\n",
+    "# Remove observations that do not include english \n",
+    "google_df = google_df[google_df['language'] == 'en']\n",
     "\n",
-    "google_df.head()\n",
-    " \n"
+    "# Remove the language column\n",
+    "google_df = google_df.drop(columns=['language'])\n",
+    "\n"
    ]
   }
  ],
