Double check if all the duplicates in the google apps data have been removed

--- a/mobile_apps.ipynb
+++ b/mobile_apps.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,8 +814,45 @@
     "google_df = google_df[google_df['language'] == 'en']\n",
     "\n",
     "# Remove the language column\n",
-    "google_df = google_df.drop(columns=['language'])\n",
-    "\n"
+    "google_df = google_df.drop(columns=['language'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "unique_apps = google_df['App'].unique() # determine the unique app names "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total number of observations is 7783\n",
+      "the total number of 6869 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if there are any duplicates after first pass \n",
+    "\n",
+    "print(f'The total number of observations is {len(google_df)}')\n",
+    "print(f'the total number of {len(unique_apps)} ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fact that number of observations is greater than the number of unique apps indicates that there still maybe duplicates"
    ]
   }
  ],
