Possible method to replace any strings that are close matches to the given string

--- a/mobile_apps.ipynb
+++ b/mobile_apps.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,9 @@
     "import numpy as np \n",
     "import pandas as pd \n",
     "from langdetect import detect\n",
-    "import langid\n"
+    "import langid\n",
+    "import fuzzywuzzy\n",
+    "from fuzzywuzzy import process\n"
    ]
   },
   {
@@ -819,6 +821,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing observations that are not for an english speaking audience\n",
+    "\n",
+    "# Identifying the rows with non-english apps\n",
+    "apple_df['language'] = apple_df['App'].apply(lambda x: langid.classify(x)[0])  # Determine the language of the app\n",
+    "\n",
+    "# Remove observations that do not include english \n",
+    "appl_df = apple_df[apple_df['language'] == 'en']\n",
+    "\n",
+    "# Remove the language column\n",
+    "apple_df = apple_df.drop(columns=['language'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 114,
    "metadata": {},
    "outputs": [],
@@ -853,6 +873,36 @@
    "metadata": {},
    "source": [
     "The fact that number of observations is greater than the number of unique apps indicates that there still maybe duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function definition \n",
+    "# This function is determines which strings are close matches to the given string\n",
+    "# The function then replaces the close matches with the string that was given to be matched\n",
+    "def replace_matches_in_column(df, column, string_to_match, min_ratio=90): \n",
+    "    # Get a list of unique strings \n",
+    "    strings = df[column].unique()\n",
+    "\n",
+    "    # Get the top 10 closest mathces to the input string \n",
+    "    matches = fuzzywuzzy.process.extract(string_to_match,strings, limit=10,\n",
+    "                                         scorer=fuzzywuzzy.fuzz.token_sort_ratio)\n",
+    "    \n",
+    "    # Only get matches with a ratio > 90\n",
+    "    close_matches = [matches[0] for matches in matches if matches[1] >= min_ratio]\n",
+    "\n",
+    "    # Get the rows of all the close matches in our dataframe\n",
+    "    rows_with_matches = df[column].isin(close_matches)\n",
+    "\n",
+    "    # Replace all rows with close matches with the input matches\n",
+    "    df.loc[rows_with_matches, column] = string_to_match\n",
+    "\n",
+    "    # Let us know when the function is done \n",
+    "    print(\"All done!\")\n"
    ]
   }
  ],
